--- a/FunBasic.Library/FunBasic.Library.csproj
+++ b/FunBasic.Library/FunBasic.Library.csproj
@@ -109,6 +109,7 @@
     <Compile Include="IConsole.cs" />
     <Compile Include="IGraphics.cs" />
     <Compile Include="Math.cs" />
+    <Compile Include="Stack.cs" />
     <Compile Include="TextWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Turtle.cs" />
