--- a/FunBasic.Library/FunBasic.Library.csproj
+++ b/FunBasic.Library/FunBasic.Library.csproj
@@ -108,6 +108,7 @@
     <Compile Include="GraphicsWindow.cs" />
     <Compile Include="IConsole.cs" />
     <Compile Include="IGraphics.cs" />
+    <Compile Include="ITimer.cs" />
     <Compile Include="Math.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Shapes.cs">
@@ -116,6 +117,7 @@
     <Compile Include="Stack.cs" />
     <Compile Include="TextWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Timer.cs" />
     <Compile Include="Turtle.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
