--- a/FunBasic.Store/FunBasic.Store.vbproj
+++ b/FunBasic.Store/FunBasic.Store.vbproj
@@ -123,6 +123,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
+    <Compile Include="Timer.vb" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
