Added Turtle image

--- a/FunBasic.Store/FunBasic.Store.vbproj
+++ b/FunBasic.Store/FunBasic.Store.vbproj
@@ -136,6 +136,7 @@
     <Content Include="Assets\SmallLogo.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
     <Content Include="Assets\StoreLogo.scale-100.png" />
+    <Content Include="Images\turtle.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
