Misc fixes to support sample Paddle game:  - added Shapes GetLeft & GetRight  - graphics methods capture current settings (pen, brush, etc.)  - Sound module (empty methods)

--- a/FunBasic.Library/FunBasic.Library.csproj
+++ b/FunBasic.Library/FunBasic.Library.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Shapes.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Sound.cs" />
     <Compile Include="Stack.cs" />
     <Compile Include="TextWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
