--- a/FunBasic.Library/FunBasic.Library.csproj
+++ b/FunBasic.Library/FunBasic.Library.csproj
@@ -117,6 +117,7 @@
     </Compile>
     <Compile Include="Sound.cs" />
     <Compile Include="Stack.cs" />
+    <Compile Include="Text.cs" />
     <Compile Include="TextWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Timer.cs" />
