Added ImageList module

--- a/FunBasic.Library/FunBasic.Library.csproj
+++ b/FunBasic.Library/FunBasic.Library.csproj
@@ -108,6 +108,7 @@
     <Compile Include="GraphicsWindow.cs" />
     <Compile Include="IConsole.cs" />
     <Compile Include="IGraphics.cs" />
+    <Compile Include="ImageList.cs" />
     <Compile Include="ITimer.cs" />
     <Compile Include="Math.cs" />
     <Compile Include="Mouse.cs" />
