--- a/FunBasic.Store/FunBasic.Store.vbproj
+++ b/FunBasic.Store/FunBasic.Store.vbproj
@@ -117,6 +117,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Console.vb" />
+    <Compile Include="DivideByTwoConverter.vb" />
     <Compile Include="FFI.vb" />
     <Compile Include="Graphics.vb" />
     <Compile Include="MainPage.xaml.vb">
