Added playback of stock sounds

--- a/FunBasic.Store/FunBasic.Store.vbproj
+++ b/FunBasic.Store/FunBasic.Store.vbproj
@@ -132,6 +132,7 @@
     <Compile Include="FFI.vb" />
     <Compile Include="Graphics.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
+    <Compile Include="Sounds.vb" />
     <Compile Include="Timer.vb" />
   </ItemGroup>
   <ItemGroup>
