--- a/FunBasic.App/FunBasic.App.vbproj
+++ b/FunBasic.App/FunBasic.App.vbproj
@@ -154,6 +154,10 @@
     <Content Include="Assets\1942.png" />
     <Content Include="Assets\Asteroids.png" />
     <Content Include="Assets\Chomper.png" />
+    <Content Include="Assets\MoveObject.png" />
+    <Content Include="Assets\PaddleGame.png" />
+    <Content Include="Assets\Paint.png" />
+    <Content Include="Assets\PolkaDots.png" />
     <Content Include="Assets\Tetris.png" />
     <Content Include="Assets\TurtleDodger.png" />
     <Content Include="Images\turtle.png" />
