--- a/FunBasic.App/FunBasic.App.vbproj
+++ b/FunBasic.App/FunBasic.App.vbproj
@@ -158,6 +158,7 @@
     <Content Include="Assets\PaddleGame.png" />
     <Content Include="Assets\Paint.png" />
     <Content Include="Assets\PolkaDots.png" />
+    <Content Include="Assets\Randomize.png" />
     <Content Include="Assets\Tetris.png" />
     <Content Include="Assets\TurtleDodger.png" />
     <Content Include="Images\turtle.png" />
@@ -185,6 +186,7 @@
     <Content Include="Programs\FractalTree.sb" />
     <Content Include="Programs\Pattern.sb" />
     <Content Include="Programs\SpiralCircles.sb" />
+    <Content Include="Programs\Randomize.sb" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Logo.scale-100.png" />
