--- a/FunBasic.Runtime/FunBasic.Runtime.fsproj
+++ b/FunBasic.Runtime/FunBasic.Runtime.fsproj
@@ -42,6 +42,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyInfo.fs" />
     <Compile Include="AST.fs" />
     <Compile Include="Parser.fs" />
     <Compile Include="Interpreter.fs" />
