--- a/FunBasic.Library/FunBasic.Library.csproj
+++ b/FunBasic.Library/FunBasic.Library.csproj
@@ -104,35 +104,35 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Clock.cs" />
-    <Compile Include="Controls.cs" />
-    <Compile Include="Desktop.cs" />
-    <Compile Include="GraphicsWindow.cs" />
-    <Compile Include="IConsole.cs" />
-    <Compile Include="IControls.cs" />
-    <Compile Include="IDrawings.cs" />
-    <Compile Include="IImages.cs" />
-    <Compile Include="IKeyboard.cs" />
-    <Compile Include="ImageList.cs" />
-    <Compile Include="IMouse.cs" />
-    <Compile Include="IShapes.cs" />
-    <Compile Include="ISounds.cs" />
-    <Compile Include="IStyle.cs" />
-    <Compile Include="ISurface.cs" />
-    <Compile Include="ITimer.cs" />
-    <Compile Include="Math.cs" />
-    <Compile Include="Mouse.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Shapes.cs">
+    <Compile Include="Modules\Clock.cs" />
+    <Compile Include="Modules\Controls.cs" />
+    <Compile Include="Modules\Desktop.cs" />
+    <Compile Include="Modules\GraphicsWindow.cs" />
+    <Compile Include="Interfaces\IConsole.cs" />
+    <Compile Include="Interfaces\IControls.cs" />
+    <Compile Include="Interfaces\IDrawings.cs" />
+    <Compile Include="Interfaces\IImages.cs" />
+    <Compile Include="Interfaces\IKeyboard.cs" />
+    <Compile Include="Modules\ImageList.cs" />
+    <Compile Include="Interfaces\IMouse.cs" />
+    <Compile Include="Interfaces\IShapes.cs" />
+    <Compile Include="Interfaces\ISounds.cs" />
+    <Compile Include="Interfaces\IStyle.cs" />
+    <Compile Include="Interfaces\ISurface.cs" />
+    <Compile Include="Interfaces\ITimer.cs" />
+    <Compile Include="Modules\Math.cs" />
+    <Compile Include="Modules\Mouse.cs" />
+    <Compile Include="Modules\Program.cs" />
+    <Compile Include="Modules\Shapes.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Sound.cs" />
-    <Compile Include="Stack.cs" />
-    <Compile Include="Text.cs" />
-    <Compile Include="TextWindow.cs" />
+    <Compile Include="Modules\Sound.cs" />
+    <Compile Include="Modules\Stack.cs" />
+    <Compile Include="Modules\Text.cs" />
+    <Compile Include="Modules\TextWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Timer.cs" />
-    <Compile Include="Turtle.cs" />
+    <Compile Include="Modules\Timer.cs" />
+    <Compile Include="Modules\Turtle.cs" />
     <Compile Include="_Library.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
