Added Speech module to library

--- a/FunBasic.Store/FunBasic.Store.vbproj
+++ b/FunBasic.Store/FunBasic.Store.vbproj
@@ -140,6 +140,7 @@
     <Compile Include="Renderer.vb" />
     <Compile Include="Shapes.vb" />
     <Compile Include="Sounds.vb" />
+    <Compile Include="Speech.vb" />
     <Compile Include="Style.vb" />
     <Compile Include="Surface.vb" />
     <Compile Include="Timer.vb" />
