--- a/FunBasic.Library/FunBasic.Library.csproj
+++ b/FunBasic.Library/FunBasic.Library.csproj
@@ -104,6 +104,7 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\ISpeech.cs" />
     <Compile Include="Modules\Clock.cs" />
     <Compile Include="Modules\Controls.cs" />
     <Compile Include="Modules\Desktop.cs" />
@@ -127,6 +128,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Modules\Sound.cs" />
+    <Compile Include="Modules\Speech.cs" />
     <Compile Include="Modules\Stack.cs" />
     <Compile Include="Modules\Text.cs" />
     <Compile Include="Modules\TextWindow.cs" />
